# moewatch-dev

./: pyproject.toml
benchmarks/: ies_benchmark.py  lead_time_benchmark.py  overhead_profile.py  synthetic_collapse_injector.py  test_lead_time_fix.py  test_watcher_confirmed_dead_fix.py
benchmarks/results/: lead_time_results.json  overhead_results.json
examples/: core_example.py  custom_moe_example.py  deepseek_audit.py  entropy_collapse_panels.py  interventions_policy_alerts.py  json_output_pipeline.py  mixtral_training_monitor.py  multi_step_sparkline.py  qwen3_moe_finetune.py  test_bandit_policy.py  test_interventions.py  test_zero_stamp.py
moewatch/: __init__.py  _audit.py  _watcher.py  config.py
moewatch/analyzer/: __init__.py  collapse.py  cross_layer.py  cusum.py  entropy.py  gradient_starvation.py  risk_score.py
moewatch/collector/: __init__.py  baseline_tracker.py  ring_buffer.py  (+1 more)
paper/: run_all_tests.py  test_01_hook_detection.py  test_02_routing_stats.py  test_03_entropy_analysis.py  test_04_collapse_detection.py  test_05_gradient_starvation.py  test_06_risk_score.py  test_07_entropy.py  test_08_interventions.py  test_09_cusum.py  test_10_risk_fusion.py  test_11_gradient_starvation.py  test_12_audit.py  test_13_serialization.py
tests/: conftest.py  test_audit.py  test_baseline_tracker.py  test_cli_reporter.py  test_collapse.py  test_collector.py  test_coverage_boost.py  test_cross_layer.py  test_detection.py  test_entropy.py  test_gradient_starvation.py  test_hooks.py  test_intervention.py  test_policy.py  test_risk_score.py  test_watcher.py
(+30 files in other folders)
